// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home snapshot a Display GridContext 1`] = `
<div>
  <div
    class="flex flex-wrap gap-6 my-8 w-full"
  >
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
    <div
      class="relative flex flex-col w-28"
    >
      <figure
        class="flex justify-center items-center"
      >
        <a
          class="relative w-full h-[calc(7rem/2*3)]"
          href="/books/1"
        >
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="This is an example book"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
      </figure>
      <div
        class="flex flex-col text-sm"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
        <p
          class="truncate"
        >
          No One
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home snapshot a Display GridContext then error 1`] = `
<div>
  <div
    class="flex flex-wrap gap-6 my-8 w-full"
  >
    <div
      class="alert alert-error shadow-lg"
    >
      <div>
        <svg
          class="w-6 h-6"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8.6 1c1.6.1 3.1.9 4.2 2 1.3 1.4 2 3.1 2 5.1 0 1.6-.6 3.1-1.6 4.4-1 1.2-2.4 2.1-4 2.4-1.6.3-3.2.1-4.6-.7-1.4-.8-2.5-2-3.1-3.5C.9 9.2.8 7.5 1.3 6c.5-1.6 1.4-2.9 2.8-3.8C5.4 1.3 7 .9 8.6 1zm.5 12.9c1.3-.3 2.5-1 3.4-2.1.8-1.1 1.3-2.4 1.2-3.8 0-1.6-.6-3.2-1.7-4.3-1-1-2.2-1.6-3.6-1.7-1.3-.1-2.7.2-3.8 1-1.1.8-1.9 1.9-2.3 3.3-.4 1.3-.4 2.7.2 4 .6 1.3 1.5 2.3 2.7 3 1.2.7 2.6.9 3.9.6zM7.9 7.5L10.3 5l.7.7-2.4 2.5 2.4 2.5-.7.7-2.4-2.5-2.4 2.5-.7-.7 2.4-2.5-2.4-2.5.7-.7 2.4 2.5z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Network Error!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home snapshot a Display GridContext then loading 1`] = `
<div>
  <div
    class="flex flex-wrap gap-6 my-8 w-full"
  >
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
    <div
      class="relative flex flex-col mb-4 w-28 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-24 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-20 h-2 bg-slate-700 rounded"
      />
    </div>
  </div>
</div>
`;

exports[`Home snapshot a Display Pagination 1`] = `
<div>
  <div
    class="btn-group"
  >
    <button
      class="btn btn-xs"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z"
        />
      </svg>
    </button>
    <button
      class="btn btn-xs btn-active"
      value="0"
    >
      1
    </button>
    <button
      class="btn btn-xs"
      value="1"
    >
      2
    </button>
    <button
      class="btn btn-xs"
      value="2"
    >
      3
    </button>
    <button
      class="btn btn-xs"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
        />
      </svg>
    </button>
  </div>
</div>
`;
